--- a/fashion.html
+++ b/fashion.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fashion - Prime Store</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="category.css">
+  <link rel="stylesheet" href="fashion.css">
 </head>
 
 <body>
@@ -62,32 +62,76 @@
     <div class="products">
 
       <div class="card">
-        <img src="asset/shoes.png" alt="Fashion">
+        <img src="asset/Fashion/one.jpeg" alt="Fashion">
         <h4>Casual Shoes</h4>
         <p class="price">$79</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/shoes.png" alt="Fashion">
+        <img src="asset/Fashion/two.jpeg" alt="Fashion">
         <h4>Sports T-Shirt</h4>
         <p class="price">$29</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/shoes.png" alt="Fashion">
+        <img src="asset/Fashion/three.jpeg" alt="Fashion">
         <h4>Formal Shirt</h4>
         <p class="price">$49</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/shoes.png" alt="Fashion">
+        <img src="asset/Fashion/four.jpeg" alt="Fashion">
         <h4>Denim Jeans</h4>
         <p class="price">$59</p>
         <button class="btn">Add to Cart</button>
       </div>
+
+      <div class="card">
+        <img src="asset/Fashion/five.jpeg" alt="Fashion">
+        <h4>Sports T-Shirt</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Fashion/six.jpeg" alt="Fashion">
+        <h4>Sports T-Shirt</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Fashion/7.jpeg" alt="Fashion">
+        <h4>Sports T-Shirt</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Fashion/8.jpeg" alt="Fashion">
+        <h4>Sports T-Shirt</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Fashion/9.jpeg" alt="Fashion">
+        <h4>Sports T-Shirt</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      
+      <div class="card">
+        <img src="asset/Fashion/10.jpeg" alt="Fashion">
+        <h4>Sports T-Shirt</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
 
     </div>
   </div>
