--- a/mobiles.html
+++ b/mobiles.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Mobiles - Prime Store</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="category.css">
+  <link rel="stylesheet" href="mobile.css">
 </head>
 
 <body>
@@ -125,49 +125,49 @@
       </div>
 
        <div class="card">
-        <img src="asset/" alt="Mobile">
+        <img src="asset/Apple iPhone 17 Pro.jpeg" alt="Mobile">
         <h4>OnePlus 15 5G </h4>
         <p class="price">$1299</p>
         <button class="btn">Add to Cart</button>
       </div>
 
        <div class="card">
-        <img src="asset/mobile5.jpeg" alt="Mobile">
+        <img src="asset/Infinix Note 50s 5G+.jpeg" alt="Mobile">
         <h4>OnePlus 15 5G </h4>
         <p class="price">$1299</p>
         <button class="btn">Add to Cart</button>
       </div>
 
        <div class="card">
-        <img src="asset/mobile5.jpeg" alt="Mobile">
+        <img src="asset/IQOO Z10 Lite 5G.jpeg" alt="Mobile">
         <h4>OnePlus 15 5G </h4>
         <p class="price">$1299</p>
         <button class="btn">Add to Cart</button>
       </div>
 
        <div class="card">
-        <img src="asset/mobile5.jpeg" alt="Mobile">
+        <img src="asset/nothing.jpeg" alt="Mobile">
         <h4>OnePlus 15 5G </h4>
         <p class="price">$1299</p>
         <button class="btn">Add to Cart</button>
       </div>
 
        <div class="card">
-        <img src="asset/mobile5.jpeg" alt="Mobile">
+        <img src="asset/pova.jpeg" alt="Mobile">
         <h4>OnePlus 15 5G </h4>
         <p class="price">$1299</p>
         <button class="btn">Add to Cart</button>
       </div>
 
        <div class="card">
-        <img src="asset/mobile5.jpeg" alt="Mobile">
+        <img src="asset/realme Narzo 80 Lite 5G.jpeg" alt="Mobile">
         <h4>OnePlus 15 5G </h4>
         <p class="price">$1299</p>
         <button class="btn">Add to Cart</button>
       </div>
 
        <div class="card">
-        <img src="asset/mobile5.jpeg" alt="Mobile">
+        <img src="asset/vivo T4 5G.jpeg" alt="Mobile">
         <h4>OnePlus 15 5G </h4>
         <p class="price">$1299</p>
         <button class="btn">Add to Cart</button>
