--- a/electronics.html
+++ b/electronics.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Electronics - Prime Store</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="category.css">
+  <link rel="stylesheet" href="electronics.css">
 </head>
 
 <body>
@@ -62,30 +62,86 @@
     <div class="products">
 
       <div class="card">
-        <img src="asset/phone2.png" alt="Electronics">
+        <img src="asset/Electronics/1.jpeg" alt="Electronics">
         <h4>Wireless Headphones</h4>
         <p class="price">$99</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/headphone.png" alt="Electronics">
+        <img src="asset/Electronics/2.jpeg" alt="Electronics">
         <h4>Laptop Pro</h4>
         <p class="price">$999</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/headphone.png" alt="Electronics">
+        <img src="asset/Electronics/3.jpeg" alt="Electronics">
         <h4>Tablet</h4>
         <p class="price">$399</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/headphone.png" alt="Electronics">
+        <img src="asset/Electronics/4.jpeg" alt="Electronics">
         <h4>Smart Watch</h4>
         <p class="price">$199</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Electronics/5.jpeg" alt="Electronics">
+        <h4>Wireless Headphones</h4>
+        <p class="price">$99</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Electronics/6.jpeg" alt="Electronics">
+        <h4>Wireless Headphones</h4>
+        <p class="price">$99</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Electronics/7.jpeg" alt="Electronics">
+        <h4>Wireless Headphones</h4>
+        <p class="price">$99</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Electronics/8.jpeg" alt="Electronics">
+        <h4>Wireless Headphones</h4>
+        <p class="price">$99</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Electronics/9.jpeg" alt="Electronics">
+        <h4>Wireless Headphones</h4>
+        <p class="price">$99</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Electronics/10.jpeg" alt="Electronics">
+        <h4>Wireless Headphones</h4>
+        <p class="price">$99</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Electronics/11.jpeg" alt="Electronics">
+        <h4>Wireless Headphones</h4>
+        <p class="price">$99</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Electronics/12.jpeg" alt="Electronics">
+        <h4>Wireless Headphones</h4>
+        <p class="price">$99</p>
         <button class="btn">Add to Cart</button>
       </div>
 
