update home page

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Home - Prime Store</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="category.css">
+  <link rel="stylesheet" href="home.css">
 </head>
 
 <body>
@@ -62,30 +62,86 @@
     <div class="products">
 
       <div class="card">
-        <img src="asset/bag.png" alt="Home">
+        <img src="asset/Home/1.jpeg" alt="Home">
         <h4>Coffee Maker</h4>
         <p class="price">$49</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/bag.png" alt="Home">
+        <img src="asset/Home/2.jpeg" alt="Home">
         <h4>Bed Sheet Set</h4>
         <p class="price">$39</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/bag.png" alt="Home">
+        <img src="asset/Home/3.jpeg" alt="Home">
         <h4>Wall Art</h4>
         <p class="price">$69</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/bag.png" alt="Home">
+        <img src="asset/Home/4.jpeg" alt="Home">
         <h4>Dining Table</h4>
         <p class="price">$299</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Home/5.jpeg" alt="Home">
+        <h4>Coffee Maker</h4>
+        <p class="price">$49</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Home/6.jpeg" alt="Home">
+        <h4>Coffee Maker</h4>
+        <p class="price">$49</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Home/7.jpeg" alt="Home">
+        <h4>Coffee Maker</h4>
+        <p class="price">$49</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Home/8.jpeg" alt="Home">
+        <h4>Coffee Maker</h4>
+        <p class="price">$49</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Home/9.jpeg" alt="Home">
+        <h4>Coffee Maker</h4>
+        <p class="price">$49</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Home/10.jpeg" alt="Home">
+        <h4>Coffee Maker</h4>
+        <p class="price">$49</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Home/11.jpeg" alt="Home">
+        <h4>Coffee Maker</h4>
+        <p class="price">$49</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Home/12.jpeg" alt="Home">
+        <h4>Coffee Maker</h4>
+        <p class="price">$49</p>
         <button class="btn">Add to Cart</button>
       </div>
 
