Appliances page is update

--- a/appliances.html
+++ b/appliances.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Appliances - Prime Store</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="category.css">
+  <link rel="stylesheet" href="appliances.css">
 </head>
 
 <body>
@@ -62,32 +62,89 @@
     <div class="products">
 
       <div class="card">
-        <img src="asset/glass.png" alt="Appliances">
+        <img src="asset/Appliances/1.jpeg" alt="Appliances">
         <h4>Washing Machine</h4>
         <p class="price">$499</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/glass.png" alt="Appliances">
+        <img src="asset/Appliances/2.jpeg" alt="Appliances">
         <h4>Refrigerator</h4>
         <p class="price">$799</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/glass.png" alt="Appliances">
+        <img src="asset/Appliances/3.jpeg" alt="Appliances">
         <h4>Microwave Oven</h4>
         <p class="price">$149</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/glass.png" alt="Appliances">
+        <img src="asset/Appliances/4.jpeg" alt="Appliances">
         <h4>AC Unit</h4>
         <p class="price">$599</p>
         <button class="btn">Add to Cart</button>
       </div>
+
+      <div class="card">
+        <img src="asset/Appliances/5.jpeg" alt="Appliances">
+        <h4>Washing Machine</h4>
+        <p class="price">$499</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Appliances/6.jpeg" alt="Appliances">
+        <h4>Washing Machine</h4>
+        <p class="price">$499</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Appliances/7.jpeg" alt="Appliances">
+        <h4>Washing Machine</h4>
+        <p class="price">$499</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Appliances/8.jpeg" alt="Appliances">
+        <h4>Washing Machine</h4>
+        <p class="price">$499</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Appliances/9.jpeg" alt="Appliances">
+        <h4>Washing Machine</h4>
+        <p class="price">$499</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Appliances/10.jpeg" alt="Appliances">
+        <h4>Washing Machine</h4>
+        <p class="price">$499</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Appliances/11.jpeg" alt="Appliances">
+        <h4>Washing Machine</h4>
+        <p class="price">$499</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Appliances/12.jpeg" alt="Appliances">
+        <h4>Washing Machine</h4>
+        <p class="price">$499</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
 
     </div>
   </div>
