--- a/beauty.html
+++ b/beauty.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Beauty - Prime Store</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="category.css">
+  <link rel="stylesheet" href="beauty.css">
 </head>
 
 <body>
@@ -62,32 +62,91 @@
     <div class="products">
 
       <div class="card">
-        <img src="asset/glass.png" alt="Beauty">
+        <img src="asset/Beauty/1.jpeg" alt="Beauty">
         <h4>Face Moisturizer</h4>
         <p class="price">$29</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/glass.png" alt="Beauty">
+        <img src="asset/Beauty/2.jpeg" alt="Beauty">
         <h4>Lipstick Set</h4>
         <p class="price">$39</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/glass.png" alt="Beauty">
+        <img src="asset/Beauty/3.jpeg" alt="Beauty">
         <h4>Hair Shampoo</h4>
         <p class="price">$19</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/glass.png" alt="Beauty">
+        <img src="asset/Beauty/4.jpeg" alt="Beauty">
         <h4>Perfume</h4>
         <p class="price">$49</p>
         <button class="btn">Add to Cart</button>
       </div>
+
+      <div class="card">
+        <img src="asset/Beauty/5.jpeg" alt="Beauty">
+        <h4>Face Moisturizer</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Beauty/6.jpeg" alt="Beauty">
+        <h4>Face Moisturizer</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Beauty/7.jpeg" alt="Beauty">
+        <h4>Face Moisturizer</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Beauty/8.jpeg" alt="Beauty">
+        <h4>Face Moisturizer</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Beauty/9.jpeg" alt="Beauty">
+        <h4>Face Moisturizer</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Beauty/10.jpeg" alt="Beauty">
+        <h4>Face Moisturizer</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Beauty/11.jpeg" alt="Beauty">
+        <h4>Face Moisturizer</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Beauty/12.jpeg" alt="Beauty">
+        <h4>Face Moisturizer</h4>
+        <p class="price">$29</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      
+
 
     </div>
   </div>
