--- a/flights.html
+++ b/flights.html
@@ -4,101 +4,96 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Flights - Prime Store</title>
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="category.css">
+  <link rel="stylesheet" href="flights.css">
 </head>
 
 <body>
 
-<!-- ================= HEADER ================= -->
+<!-- ================= TOP HEADER ================= -->
 <header class="topbar">
+  <div class="logo">❖ Prime Store</div>
 
-  <!-- LOGO -->
-  <div class="logo">
-    ❖ <span>Prime Store</span>
-  </div>
-
-  <!-- BIG SEARCH -->
   <div class="search-wrapper">
-    <input id="searchInput" type="text" placeholder="Search for Products, Brands and More">
+    <input type="text" placeholder="Search for Products, Brands and More">
   </div>
 
-  <!-- RIGHT ACTIONS -->
   <div class="actions">
-    <button id="loginBtn">Login</button>
+    <button class="login-btn">Login</button>
     <button class="cart-btn">🛒 Cart</button>
   </div>
-
 </header>
 
 
-<!-- ================= BREADCRUMB ================= -->
-<div class="breadcrumb">
-  <a href="index.html">Home</a> / <span>Flights</span>
-</div>
+<!-- ================= HERO TRAVEL BANNER ================= -->
+<section class="travel-hero">
+  <h1>Get. Set. Travel.</h1>
 
+  <!-- ===== BOOKING CARD ===== -->
+  <div class="booking-box">
 
-<!-- ================= CATEGORY TITLE ================= -->
-<section class="category-header">
-  <h1>✈️ Flights</h1>
-  <p>Book your flights and vacation packages</p>
+    <div class="trip-type">
+      <label><input type="radio" name="trip" checked> One Way</label>
+      <label><input type="radio" name="trip"> Round Trip</label>
+    </div>
+
+    <div class="booking-form">
+
+      <input placeholder="From">
+      <input placeholder="To">
+      <input type="date">
+      <input type="date">
+      <select>
+        <option>1 Traveller | Economy</option>
+        <option>2 Traveller | Business</option>
+      </select>
+
+      <button class="search-btn">🔍 SEARCH</button>
+    </div>
+
+  </div>
 </section>
 
 
-<!-- ================= FILTERS ================= -->
-<div class="filters-container">
-  <div class="filters">
-    <h3>Filters</h3>
-    <div class="filter-group">
-      <label><input type="checkbox"> Economy</label>
-      <label><input type="checkbox"> Business</label>
-      <label><input type="checkbox"> First Class</label>
-      <label><input type="checkbox"> Direct Flights</label>
-    </div>
+<!-- ================= DEAL BANNER ================= -->
+<section class="deal-banner">
+  <h2>Airline Deals</h2>
+  <p>Up to 20% OFF on flights</p>
+</section>
+
+
+<!-- ================= FLIGHT CARDS ================= -->
+<section class="flights-list">
+
+  <div class="flight-card">
+    <h4>NYC → Miami</h4>
+    <span>$299</span>
+    <button>Book Now</button>
   </div>
 
-  <!-- ================= PRODUCTS ================= -->
-  <div class="products-container">
-    <div class="products">
-
-      <div class="card">
-        <img src="asset/headphone.png" alt="Flights">
-        <h4>NYC to Miami</h4>
-        <p class="price">$299</p>
-        <button class="btn">Book Now</button>
-      </div>
-
-      <div class="card">
-        <img src="asset/headphone.png" alt="Flights">
-        <h4>LA to Vegas</h4>
-        <p class="price">$199</p>
-        <button class="btn">Book Now</button>
-      </div>
-
-      <div class="card">
-        <img src="asset/headphone.png" alt="Flights">
-        <h4>Chicago to Boston</h4>
-        <p class="price">$249</p>
-        <button class="btn">Book Now</button>
-      </div>
-
-      <div class="card">
-        <img src="asset/headphone.png" alt="Flights">
-        <h4>Miami to Caribbean</h4>
-        <p class="price">$399</p>
-        <button class="btn">Book Now</button>
-      </div>
-
-    </div>
+  <div class="flight-card">
+    <h4>LA → Vegas</h4>
+    <span>$199</span>
+    <button>Book Now</button>
   </div>
-</div>
+
+  <div class="flight-card">
+    <h4>Chicago → Boston</h4>
+    <span>$249</span>
+    <button>Book Now</button>
+  </div>
+
+  <div class="flight-card">
+    <h4>Miami → Caribbean</h4>
+    <span>$399</span>
+    <button>Book Now</button>
+  </div>
+
+</section>
 
 
-<!-- ================= FOOTER ================= -->
 <footer class="footer">
-  <p>&copy; 2026 Prime Store | All Rights Reserved</p>
+  © 2026 Prime Store | Travel Booking
 </footer>
 
-<script src="index.js"></script>
 </body>
 </html>
