--- a/grocery.html
+++ b/grocery.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Grocery - Prime Store</title>
   <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="category.css">
+  <link rel="stylesheet" href="grocery.css">
 </head>
 
 <body>
@@ -62,30 +62,86 @@
     <div class="products">
 
       <div class="card">
-        <img src="asset/bag.png" alt="Grocery">
+        <img src="asset/Grocery/1.jpeg" alt="Grocery">
         <h4>Fresh Vegetables</h4>
         <p class="price">$12</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/bag.png" alt="Grocery">
+        <img src="asset/Grocery/2.jpeg" alt="Grocery">
         <h4>Organic Milk</h4>
         <p class="price">$5</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/bag.png" alt="Grocery">
+        <img src="asset/Grocery/3.jpeg" alt="Grocery">
         <h4>Whole Wheat Bread</h4>
         <p class="price">$3</p>
         <button class="btn">Add to Cart</button>
       </div>
 
       <div class="card">
-        <img src="asset/bag.png" alt="Grocery">
+        <img src="asset/Grocery/4.jpeg" alt="Grocery">
         <h4>Fresh Fruits</h4>
         <p class="price">$15</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Grocery/5.jpeg" alt="Grocery">
+        <h4>Fresh Vegetables</h4>
+        <p class="price">$12</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Grocery/6.jpeg" alt="Grocery">
+        <h4>Fresh Vegetables</h4>
+        <p class="price">$12</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Grocery/7.jpeg" alt="Grocery">
+        <h4>Fresh Vegetables</h4>
+        <p class="price">$12</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Grocery/8.jpeg" alt="Grocery">
+        <h4>Fresh Vegetables</h4>
+        <p class="price">$12</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Grocery/9.jpeg" alt="Grocery">
+        <h4>Fresh Vegetables</h4>
+        <p class="price">$12</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Grocery/10.jpeg" alt="Grocery">
+        <h4>Fresh Vegetables</h4>
+        <p class="price">$12</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Grocery/11.jpeg" alt="Grocery">
+        <h4>Fresh Vegetables</h4>
+        <p class="price">$12</p>
+        <button class="btn">Add to Cart</button>
+      </div>
+
+      <div class="card">
+        <img src="asset/Grocery/12.jpeg" alt="Grocery">
+        <h4>Fresh Vegetables</h4>
+        <p class="price">$12</p>
         <button class="btn">Add to Cart</button>
       </div>
 
