--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@
 <!-- ================= HEADER ================= -->
 <header class="topbar">
 
-  <!-- LOGO -->
   <div class="logo">
     ❖ <span>Prime Store</span>
   </div>
 
-  <!-- BIG SEARCH -->
   <div class="search-wrapper">
     <input id="searchInput" type="text" placeholder="Search for Products, Brands and More">
   </div>
 
-  <!-- RIGHT ACTIONS -->
   <div class="actions">
     <button id="loginBtn">Login</button>
     <button class="cart-btn">🛒 Cart</button>
@@ -41,6 +38,9 @@
   <a href="beauty.html"><div>💄 Beauty</div></a>
   <a href="flights.html"><div>✈️ Flights</div></a>
   <a href="grocery.html"><div>🛒 Grocery</div></a>
+
+  <!-- NEW FUN PAGE -->
+  <a href="funzone.html"><div>🎉 Fun Zone</div></a>
 </div>
 
 
@@ -48,6 +48,36 @@
 <section class="banner">
   <h1>BIG SALE DAYS</h1>
   <p>Up to 70% OFF on all products</p>
+</section>
+
+
+<!-- ================= ABOUT PRIME STORE ================= -->
+<section class="products-section">
+  <h2>Why Shop at Prime Store?</h2>
+
+  <div class="products">
+
+    <div class="card">
+      <h4>🚚 Fast Delivery</h4>
+      <p>Same-day & next-day shipping available</p>
+    </div>
+
+    <div class="card">
+      <h4>💰 Best Prices</h4>
+      <p>Lowest prices guaranteed deals everyday</p>
+    </div>
+
+    <div class="card">
+      <h4>🔒 Secure Payments</h4>
+      <p>100% safe checkout & easy refunds</p>
+    </div>
+
+    <div class="card">
+      <h4>⭐ Premium Quality</h4>
+      <p>Top brands & verified sellers only</p>
+    </div>
+
+  </div>
 </section>
 
 
@@ -85,6 +115,44 @@
 </section>
 
 
+<!-- ================= FUN ZONE SECTION ================= -->
+<section class="products-section">
+  <h2>🎉 Prime Fun Zone</h2>
+
+  <div class="products">
+
+    <a href="funzone.html">
+      <div class="card">
+        <h4>🎁 Spin & Win</h4>
+        <p>Get coupons & surprise gifts</p>
+      </div>
+    </a>
+
+    <a href="funzone.html">
+      <div class="card">
+        <h4>🎯 Daily Quiz</h4>
+        <p>Answer & win rewards</p>
+      </div>
+    </a>
+
+    <a href="funzone.html">
+      <div class="card">
+        <h4>🏆 Lucky Draw</h4>
+        <p>Win exciting prizes</p>
+      </div>
+    </a>
+
+    <a href="funzone.html">
+      <div class="card">
+        <h4>🔥 Flash Games</h4>
+        <p>Play & earn points</p>
+      </div>
+    </a>
+
+  </div>
+</section>
+
+
 <!-- ================= LOGIN MODAL ================= -->
 <div class="modal" id="loginModal">
   <div class="modal-box">
@@ -95,6 +163,12 @@
     <button>Login</button>
   </div>
 </div>
+
+
+<!-- ================= FOOTER ================= -->
+<footer class="footer">
+  <p>© 2026 Prime Store | All Rights Reserved</p>
+</footer>
 
 
 <script src="index.js"></script>
