update the code footer section and cart button

--- a/index.html
+++ b/index.html
@@ -166,9 +166,89 @@
 
 
 <!-- ================= FOOTER ================= -->
+<!-- ================= FOOTER ================= -->
 <footer class="footer">
-  <p>© 2026 Prime Store | All Rights Reserved</p>
+
+  <div class="footer-top">
+
+    <!-- ABOUT -->
+    <div class="footer-col">
+      <h4>ABOUT</h4>
+      <a href="#">Contact Us</a>
+      <a href="#">About Us</a>
+      <a href="#">Careers</a>
+      <a href="#">Stories</a>
+      <a href="#">Press</a>
+      <a href="#">Corporate Information</a>
+    </div>
+
+    <!-- GROUP COMPANIES -->
+    <div class="footer-col">
+      <h4>GROUP COMPANIES</h4>
+      <a href="#">Prime Fashion</a>
+      <a href="#">Prime Travel</a>
+      <a href="#">Prime Shop</a>
+    </div>
+
+    <!-- HELP -->
+    <div class="footer-col">
+      <h4>HELP</h4>
+      <a href="#">Payments</a>
+      <a href="#">Shipping</a>
+      <a href="#">Cancellation & Returns</a>
+      <a href="#">FAQ</a>
+    </div>
+
+    <!-- POLICY -->
+    <div class="footer-col">
+      <h4>CONSUMER POLICY</h4>
+      <a href="#">Terms Of Use</a>
+      <a href="#">Security</a>
+      <a href="#">Privacy</a>
+      <a href="#">Sitemap</a>
+      <a href="#">Grievance Redressal</a>
+    </div>
+
+    <!-- ADDRESS -->
+    <div class="footer-col address">
+      <h4>Mail Us:</h4>
+      <p>
+        Prime Store Pvt Ltd,<br>
+        Tech Park Avenue,<br>
+        Bengaluru, Karnataka,<br>
+        India - 560001
+      </p>
+
+      <h4 class="mt">Social</h4>
+      <div class="social">
+        <span>📘</span>
+        <span>🐦</span>
+        <span>▶️</span>
+        <span>📸</span>
+      </div>
+    </div>
+
+  </div>
+
+
+  <!-- BOTTOM BAR -->
+  <div class="footer-bottom">
+
+    <div class="bottom-links">
+      <span>Become a Seller</span>
+      <span>Advertise</span>
+      <span>Gift Cards</span>
+      <span>Help Center</span>
+    </div>
+
+    <p class="copyright">
+      © 2026 PrimeStore.com | All Rights Reserved
+    </p>
+
+  </div>
+
 </footer>
+
 
 
 <script src="index.js"></script>
